--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html>
 <head><title>CI/CD App</title><link rel="stylesheet" href="style.css"></head>
-<body><h1>Hello from Jenkins CI/CD!</h1></body>
+<body><h1>CI/CD works like magic!</h1></body>
 </html>
