--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Jenkins Web App</title>
+  <title>Jenkins Web App</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Hello from Jenkins CI/CD!</h1>
-  <p>This is deployed automatically.</p>
 </body>
 </html>
+
